--- a/product.css
+++ b/product.css
@@ -50,3 +50,11 @@ body{
 a {
     color: inherit;
 }
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    
+}
