--- a/contact.css
+++ b/contact.css
@@ -53,7 +53,6 @@ div {
     margin-left: auto;
     margin-right: auto;
     width : 20%;
-    background-color: rgb(9, 214, 149);
     text-align: center;
     padding: 10px;
     margin-top: 20px;
@@ -62,4 +61,35 @@ div {
     font-size: large;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-seri;
+}
+
+.whatsapp {
+    background-color: rgb(37,211,102);
+}
+
+.spotify {
+    background-color: rgb(30,215, 96);
+}
+
+.soundcloud {
+    background-color: rgb(242, 111,35);
+}
+.onlyfan{
+    background-color: rgb(0,174,240);
+}
+
+.facebook {
+    background: rgb(59, 89, 152);
+}
+
+.instagram{
+    background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    }
+
+.apple {
+    background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
 }
