--- a/contact.css
+++ b/contact.css
@@ -1,95 +1,209 @@
-header {
-    text-align: center;
-    border: 1px solid;
-    padding: 15px;
-    grid-area: head;
-}
+/*laptop*/
+/*laptop*/
+/*laptop*/
 
-body{
-    background-color: black;
-    color: white;
-}
-
-
-.product {
-    grid-area: products;
-    border: 1px solid;
-    padding: 15px;
-}
-
- .tour{
-        grid-area: tour;
-        border: 1px solid;
-        padding: 15px;
-}
-
-.contact{
-        grid-area: contact;
-        border: 1px solid;
-        padding: 15px;
-        background-color: purple;
+@media screen and (min-width: 900px) {
     
-
- }
-
- .top {
-    display: grid;
-    grid-template-areas: 
-    'head head head head'
-    'disco products tour contact';
-}
-
-.disco {
-    grid-area: disco ;
-    border: 1px solid;
-    padding: 15px;
-}
-
-a {
-    color: inherit;
-}
-
-div {
-    margin-left: auto;
-    margin-right: auto;
-    width : 20%;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
-    border: 1px solid;
-    border-radius: 20px;
-    font-size: large;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-seri;
-}
-
-.whatsapp {
-    background-color: rgb(37,211,102);
-}
-
-.spotify {
-    background-color: rgb(30,215, 96);
-}
-
-.soundcloud {
-    background-color: rgb(242, 111,35);
-}
-.onlyfan{
-    background-color: rgb(0,174,240);
-}
-
-.facebook {
-    background: rgb(59, 89, 152);
-}
-
-.instagram{
-    background: #f09433; 
-  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+    header {
+        text-align: center;
+        border: 1px solid;
+        padding: 15px;
+        grid-area: head;
     }
-
-.apple {
-    background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
-}
+    
+    body{
+        background-color: black;
+        color: white;
+    }
+    
+    
+    .product {
+        grid-area: products;
+        border: 1px solid;
+        padding: 15px;
+    }
+    
+     .tour{
+            grid-area: tour;
+            border: 1px solid;
+            padding: 15px;
+    }
+    
+    .contact{
+            grid-area: contact;
+            border: 1px solid;
+            padding: 15px;
+            background-color: purple;
+        
+    
+     }
+    
+     .top {
+        display: grid;
+        grid-template-areas: 
+        'head head head head'
+        'disco products tour contact';
+    }
+    
+    .disco {
+        grid-area: disco ;
+        border: 1px solid;
+        padding: 15px;
+    }
+    
+    a {
+        color: inherit;
+    }
+    
+    div {
+        margin-left: auto;
+        margin-right: auto;
+        width : 20%;
+        text-align: center;
+        padding: 10px;
+        margin-top: 20px;
+        border: 1px solid;
+        border-radius: 20px;
+        font-size: large;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-seri;
+    }
+    
+    .whatsapp {
+        background-color: rgb(37,211,102);
+    }
+    
+    .spotify {
+        background-color: rgb(30,215, 96);
+    }
+    
+    .soundcloud {
+        background-color: rgb(242, 111,35);
+    }
+    .onlyfan{
+        background-color: rgb(0,174,240);
+    }
+    
+    .facebook {
+        background: rgb(59, 89, 152);
+    }
+    
+    .instagram{
+        background: #f09433; 
+      background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+      background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+      background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+        }
+    
+    .apple {
+        background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+    }
+    
+    }
+    
+    /* phone */
+    /* phone */
+    /* phone */
+    /* phone */
+    
+    @media screen and (max-width: 800px) {
+        header {
+            text-align: center;
+            border: 1px solid;
+            padding: 15px;
+            grid-area: head;
+        }
+        
+        body{
+            background-color: black;
+            color: white;
+        }
+        
+        
+        .product {
+            grid-area: products;
+            border: 1px solid;
+            padding: 15px;
+        }
+        
+         .tour{
+                grid-area: tour;
+                border: 1px solid;
+                padding: 15px;
+        }
+        
+        .contact{
+                grid-area: contact;
+                border: 1px solid;
+                padding: 15px;
+                background-color: purple;
+            
+        
+         }
+        
+         .top {
+            display: grid;
+            grid-template-areas: 
+            'head head head head'
+            'disco products tour contact';
+        }
+        
+        .disco {
+            grid-area: disco ;
+            border: 1px solid;
+            padding: 15px;
+        }
+        
+        a {
+            color: inherit;
+        }
+        
+        div {
+            margin-left: auto;
+            margin-right: auto;
+            width : 30%;
+            text-align: center;
+            padding: 10px;
+            margin-top: 20px;
+            border: 1px solid;
+            border-radius: 20px;
+            font-size: large;
+            font-weight: bold;
+            font-family: Arial, Helvetica, sans-seri;
+        }
+        
+        .whatsapp {
+            background-color: rgb(37,211,102);
+        }
+        
+        .spotify {
+            background-color: rgb(30,215, 96);
+        }
+        
+        .soundcloud {
+            background-color: rgb(242, 111,35);
+        }
+        .onlyfan{
+            background-color: rgb(0,174,240);
+        }
+        
+        .facebook {
+            background: rgb(59, 89, 152);
+        }
+        
+        .instagram{
+            background: #f09433; 
+          background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+          background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+          background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+            }
+        
+        .apple {
+            background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
+        }
+        
+           
+    
+    }
