--- a/contact.css
+++ b/contact.css
@@ -204,6 +204,11 @@
             background-image: linear-gradient(-45deg, #35C3F3 0%, #8b9fe8 20%, #e681d8 39%, #ffa9a4 76%, #FED2CE 100%);
         }
         
+        
+*{
+    outline: 1px solid #f00 !important;
+  }
+        
            
     
     }
