--- a/contact.css
+++ b/contact.css
@@ -108,72 +108,63 @@
     /* phone */
     
     @media screen and (max-width: 800px) {
-        header {
-            text-align: center;
-            border: 1px solid;
-            padding: 15px;
-            grid-area: head;
-        }
-        
-        body{
-            background-color: black;
-            color: white;
-        }
-        
-        
-        .product {
-            grid-area: products;
-            border: 1px solid;
-            padding: 15px;
-        }
-        
-         .tour{
-                grid-area: tour;
-                border: 1px solid;
-                padding: 15px;
-        }
-        
-        .contact{
-                grid-area: contact;
-                border: 1px solid;
-                padding: 15px;
-                background-color: purple;
-            
-        
+        #clsmenu {
+            border-radius: 30%;
+            margin-bottom: 3%;
+            position: absolute;
+            left: 0%;
+         }
+
+         #menu {
+            position: fixed;
+            left: 3%;
          }
         
-         .top {
-            display: grid;
-            grid-template-areas: 
-            'head head head head'
-            'disco products tour contact';
-              font-size: small;
-        }
-        
-        .disco {
-            grid-area: disco ;
-            border: 1px solid;
-            padding: 15px;
-        }
-        
-        a {
+        .nav {
             color: inherit;
+            padding: 2%;
         }
         
         div {
-            margin-left: auto;
-            margin-right: auto;
-            width : 30%;
+            
             text-align: center;
             padding: 10px;
             margin-top: 20px;
             border: 1px solid;
             border-radius: 20px;
-            font-size: small;
+            font-size: large;
             font-weight: bold;
             font-family: Arial, Helvetica, sans-seri;
+
         }
-        
+
+        body {
+            background-color: black;
+            color: white;
+        }
+
+        #top {
+            background-color: rgba(128, 128, 128, 0.908);
+            width:40%;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            z-index: +1;
+            position: fixed;
+            left: -60%;
+            border-radius: 5%;
+            text-align: center;
+            transition: 1s;
+        }
+
+        .socalm {
+            text-align: center;
+        }
+
+        #phezulu {
+            text-align: center;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        }
+
+
         .whatsapp {
             background-color: rgb(37,211,102);
         }
